0.1.3.0001:

- fixed compiler, engine, hub and game not correctly compiling to debug mode
- added DEBUG window title tag to compiler, engine, hub and game if it compiled in debug mode

0.1.3.0002:

- added brand new completely separate physics library made by me
- rigidbody component
- box and sphere collider attached to rigidbody
- change mass, restitution, static friction, dynamic friction, gravity factor, gravity toggle, dynamic toggle in rigidbody component in inspector
- any gameobject with rigidbody collides with any gameobject with rigidbody component and they dont go through each other
- rigidbody gameobjects have linear and angular velocity
- rigidbody gameobjects have friction when colliding with other rigidbody gameobjects
- audio no longer "continues playing" if it has reached its end
- when assigning scene, texture, audio file or model the file hierarchy list now also shows file extension

0.1.3.0003:
- added collapsible headers to inspector
- no longer forced to have CMake, Ninja and Visual Studio installed to open the engine
- a warning popup is created if user tries to compile or clean rebuild game if CMake, Ninja and Visual Studio are not installed and added to USER/SYSTEM path on windows
- a warning popup is created if user tries to run game which has not been created properly yet, removed the console error message for it
- reusing the Run function in compile.cpp to check for invalid paths after game is compiled
- fixed impulse and torque debug buttons
- fixed a bug that affected other non-rigidbodies if a rigidbody gameobject had its usegravity and isdynamic set to true