@@ -17,12 +17,12 @@ namespace Core
 	class Physics
 	{
 	public:
+		static inline bool simulatePhysics;
+
 		static inline PhysicsWorld* physicsWorld = nullptr;
 
 		static void Initialize(const vec3& gravity = vec3(0.0f, -9.81f, 0.0f));
 
 		static void Update(float deltaTime);
-	private:
-		
 	};
 }
